--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     window.onload=()=>{
       google.accounts.id.initialize({
-        client_id:'YOUR_CLIENT_ID.apps.googleusercontent.com',
+        client_id:'181683898823-avo330lnmj7d79a88q6rs98u7qefq9eo.apps.googleusercontent.com',
         callback:handleCredentialResponse,
         ux_mode:'popup',
         use_fedcm_for_prompt:false
