--- a/index.html
+++ b/index.html
@@ -54,12 +54,21 @@
     });
 
     /*— 2. Decode JWT safely —*/
-    function parseJwt(token){
-      try{
-        const base64=token.split('.')[1].replace(/-/g,'+').replace(/_/g,'/');
-        const json=decodeURIComponent(atob(base64).split('').map(c=>'%''+('00'+c.charCodeAt(0).toString(16)).slice(-2)).join(''));
+       function parseJwt(token) {
+      try {
+        const base64 = token.split('.')[1]
+          .replace(/-/g, '+')
+          .replace(/_/g, '/');
+        const json = decodeURIComponent(
+          atob(base64)
+            .split('')
+            .map(c => '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2))
+            .join('')
+        );
         return JSON.parse(json);
-      }catch{return{};}
+      } catch {
+        return {};
+      }
     }
 
     /*— 3. Mini popup helper —*/
