--- a/mainpage.html
+++ b/mainpage.html
@@ -4,154 +4,117 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>מניעת אובדן - סימולציה</title>
+
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f3f4f6;
-    }
+    body{margin:0;font-family:Arial,sans-serif;background:#f3f4f6}
 
-    /* Navbar styles */
-    .navbar {
-      background: #fff;
-      border-radius: 0 0 8px 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      padding: 0.75rem 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    /* ─────────────  NAVBAR  ───────────── */
+    .navbar{
+      background:#fff;
+      border-radius:0 0 8px 8px;
+      box-shadow:0 2px 4px rgba(0,0,0,.1);
+      padding:.75rem 1rem;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
     }
-
-    .navbar .welcome {
-      font-weight: bold;
-      color: #d94d72;
-      white-space: nowrap;
+    .welcome{
+      font-weight:bold;
+      color:#d94d72;
+      white-space:nowrap;
     }
-
-    .navbar ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 1rem;
-      flex-direction: row-reverse; /* RTL order */
+    .navbar ul{
+      list-style:none;
+      margin:0;
+      padding:0;
+      display:flex;
+      gap:1rem;
+      flex-direction:row-reverse;      /* RTL order */
     }
-
-    .navbar a {
-      text-decoration: none;
-      color: #555;
-      font-weight: bold;
+    .navbar a{
+      text-decoration:none;
+      color:#555;
+      font-weight:bold;
     }
+    .navbar a:hover{color:#d94d72}
 
-    .navbar a:hover {
-      color: #d94d72;
+    /* ─────────────  PAGE BASICS  ───────────── */
+    .header{background:#f66da0;color:#fff;padding:1rem;text-align:center;font-weight:bold}
+    .sub-header{background:#d2f3f9;text-align:center;padding:1rem;font-size:1.2rem}
+    .question{font-size:1.5rem;color:#d94d72;margin:1rem auto;text-align:center;font-weight:bold}
+
+    /* ─────────────  CARDS  ───────────── */
+    .card{
+      background:#fff;
+      border-radius:20px;
+      margin:1rem;
+      padding:1rem;
+      box-shadow:0 2px 6px rgba(0,0,0,.1);
+      display:flex;
+      align-items:flex-start;
+      gap:1rem;
     }
-
-    /* Page‑specific styles */
-    .header {
-      background-color: #f66da0;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-      font-weight: bold;
+    .icon-circle{
+      background:#fddae6;
+      border-radius:50%;
+      padding:.5rem;
+      text-align:center;
+      min-width:2.5rem;
     }
+    .text-content{flex:1}
 
-    .sub-header {
-      background-color: #d2f3f9;
-      text-align: center;
-      padding: 1rem;
-      font-size: 1.2rem;
+    /* ─────────────  BUTTONS  ───────────── */
+    .button-container{text-align:center;margin:2rem}
+    .back-button{
+      background:#f66da0;
+      border:none;
+      color:#fff;
+      padding:.8rem 2rem;
+      border-radius:40px;
+      font-size:1rem;
+      cursor:pointer;
     }
-
-    .question {
-      font-size: 1.5rem;
-      color: #d94d72;
-      margin: 1rem auto;
-      text-align: center;
-      font-weight: bold;
-    }
-
-    .card {
-      background: white;
-      border-radius: 20px;
-      margin: 1rem;
-      padding: 1rem;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      display: flex;
-      align-items: flex-start;
-      gap: 1rem;
-    }
-
-    .icon-circle {
-      background-color: #fddae6;
-      border-radius: 50%;
-      padding: 0.5rem;
-      text-align: center;
-      min-width: 2.5rem;
-    }
-
-    .text-content {
-      flex: 1;
-    }
-
-    .button-container {
-      text-align: center;
-      margin: 2rem;
-    }
-
-    .back-button {
-      background-color: #f66da0;
-      border: none;
-      color: white;
-      padding: 0.8rem 2rem;
-      border-radius: 40px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .input-button {
-      background-color: white;
-      color: #f66da0;
-      border: 2px solid #f66da0;
-      border-radius: 40px;
-      padding: 0.8rem 2rem;
-      font-size: 1rem;
-      cursor: pointer;
+    .input-button{
+      background:#fff;
+      color:#f66da0;
+      border:2px solid #f66da0;
+      border-radius:40px;
+      padding:.8rem 2rem;
+      font-size:1rem;
+      cursor:pointer;
     }
   </style>
 </head>
 <body>
-  <!-- Reusable Navbar -->
+  <!-- ░░░░░░  NAVBAR  ░░░░░░ -->
   <nav class="navbar">
-    <span class="welcome">ברוך הבא, דקל</span>
+    <span class="welcome">ברוך הבא</span>
     <ul>
-      <li><a href="simulation.html">דף סימולציה</a></li>
-      <li><a href="lessons.html">דף שיעורים</a></li>
-      <li><a href="settings.html">דף הגדרות</a></li>
+      <li><a href="settings.html">הגדרות</a></li>
       <li><a href="tel:1201">התקשר לער"ן</a></li>
     </ul>
   </nav>
 
+  <!-- ░░░░░░  PAGE CONTENT  ░░░░░░ -->
   <div class="header">מניעת אובדן - סימולציה</div>
   <div class="sub-header">מה תרצי לעשות היום?</div>
   <div class="question">?</div>
 
+  <!-- כרטיסי תפריט ראשי -->
   <div class="card">
     <div class="icon-circle">▶️</div>
     <div class="text-content">
-      <strong>
-        <a href="videos.html" style="color: inherit; text-decoration: none;">להמשיך לצפות בקורס</a>
-      </strong><br />
+      <strong><a href="videos.html" style="color:inherit;text-decoration:none;">להמשיך לצפות בקורס</a></strong><br>
       המשיכי בדיוק מהנקודה שהפסקת. שיעורים קצרים, הסברים בגובה העיניים, ודוגמאות מהחיים ומהשטח.
     </div>
   </div>
 
-  <a href="simulate.html" style="text-decoration: none; color: inherit;">
+  <a href="simulate.html" style="text-decoration:none;color:inherit;">
     <div class="card">
       <div class="icon-circle">💬</div>
       <div class="text-content">
-        <strong>לתרגל סימולציות</strong><br />
-        תרגול שיחות עם דמויות שונות במצבי אמת. תוכל לבחור נושא (חרדה, עצב, פגיעה עצמית ועוד) ולתרגל תגובות עם משוב מידי.
+        <strong>לתרגל סימולציות</strong><br>
+        תרגול שיחות עם דמויות שונות במצבי אמת. תוכלי לבחור נושא (חרדה, עצב, פגיעה עצמית ועוד) ולתרגל תגובות עם משוב מידי.
       </div>
     </div>
   </a>
@@ -159,14 +122,35 @@
   <div class="card">
     <div class="icon-circle">🤖</div>
     <div class="text-content">
-      <strong>לדבר עם בוט</strong><br />
-      אם יש לך שאלה שתרצי לפרוק או אולי לשאול שאלה? תוכלי לדבר כאן כדי להעלות דילמה ולהיעזר. הוא לא מחליף איש מקצוע – אבל הוא תמיד כאן.
+      <strong>לדבר עם בוט</strong><br>
+      יש לך שאלה לפרוק או דילמה לשתף? הבוט כאן להקשיב ולעזור (לא מחליף איש מקצוע).
     </div>
   </div>
 
+  <!-- כרטיס להגדרות -->
+  <a href="settings.html" style="text-decoration:none;color:inherit;">
+    <div class="card">
+      <div class="icon-circle">⚙️</div>
+      <div class="text-content">
+        <strong>הגדרות משתמש</strong><br>
+        עדכוני פרטים, העדפות והתקדמות בלחיצה אחת.
+      </div>
+    </div>
+  </a>
+
+  <!-- כפתורים תחתונים -->
   <div class="button-container">
     <button class="back-button">⬅️</button>
     <button class="input-button">שאלות? שאלו אותי</button>
   </div>
+
+  <!-- ░░░░░░  SCRIPT  ░░░░░░ -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const savedName = sessionStorage.getItem('name');
+      const el = document.querySelector('.welcome');
+      if (el && savedName) el.textContent = `ברוך הבא, ${savedName}`;
+    });
+  </script>
 </body>
 </html>
