--- a/simulate.html
+++ b/simulate.html
@@ -5,187 +5,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>סימולציית מצוקה – סגנון וואטסאפ</title>
 
-  <!-- ======  BASIC WA-LIKE STYLING  ====== -->
+  <!-- =====  WA-LIKE THEME  ===== -->
   <style>
     :root{
-      --wa-green:#00a884;          /* navbar / buttons */
-      --wa-light:#dcf8c6;          /* outgoing bubble */
-      --wa-bg:#eae6df;             /* chat background */
+      --wa-green:#00a884;        /* navbar + send */
+      --wa-light:#dcf8c6;        /* outgoing bubble */
+      --wa-bg:#eae6df;           /* chat background */
       --avatar-size:34px;
     }
+    body{margin:0;background:var(--wa-bg);display:flex;justify-content:center;padding:2vh 0;
+         font-family:"Segoe UI",Roboto,Arial,sans-serif;}
+    .phone{width:370px;max-width:95vw;height:92vh;background:#fff;border-radius:22px;
+           box-shadow:0 0 18px rgba(0,0,0,.2);display:flex;flex-direction:column;overflow:hidden;}
 
-    body{
-      font-family:"Segoe UI",Roboto,Arial,sans-serif;
-      background:var(--wa-bg);
-      margin:0;
-      display:flex;
-      justify-content:center;
-      padding:2vh 0;
-    }
+    /* ===== NAVBAR ===== */
+    .top-nav{background:var(--wa-green);color:#fff;display:flex;flex-direction:row-reverse;
+             align-items:center;gap:1rem;padding:.7rem 1rem;font-weight:bold;font-size:.95rem;}
+    .top-nav a{color:#fff;text-decoration:none;}
 
-    /* phone mock */
-    .phone{
-      width:370px;
-      max-width:95vw;
-      background:#fff;
-      border-radius:22px;
-      box-shadow:0 0 18px rgba(0,0,0,.2);
-      overflow:hidden;
-      display:flex;
-      flex-direction:column;
-      height:92vh;
-    }
+    /* ===== SELECTOR ===== */
+    #scenarioContainer{background:#f0f2f5;padding:1rem;display:flex;flex-direction:column;gap:1rem;}
+    #scenarioContainer select{padding:.6rem .9rem;border-radius:8px;border:1px solid #ccc;font-size:.95rem;}
 
-    /* ===== TOP BAR (with call & back) ===== */
-    .top-nav{
-      background:var(--wa-green);
-      color:#fff;
-      display:flex;
-      flex-direction:row-reverse; /* RTL */
-      align-items:center;
-      gap:1rem;
-      padding:.7rem 1rem;
-    }
-    .top-nav a{
-      color:#fff;
-      text-decoration:none;
-      font-weight:bold;
-      font-size:.95rem;
-    }
+    /* ===== CHAT ===== */
+    #chatContainer{flex:1;display:none;flex-direction:column;background:var(--wa-bg);
+                   overflow:auto;padding:1rem .6rem;}
+    #instructionsDiv{background:#fff;border-radius:7.5px;padding:.6rem .9rem;margin-bottom:.8rem;
+                     font-size:.85rem;color:#333;line-height:1.4;}
 
-    /* ===== HEADER TITLE ===== */
-    h1{
-      display:none; /* hidden – WA style uses only top bar */
-    }
+    .message{display:flex;gap:.4rem;margin:.4rem 0;max-width:80%;font-size:.9rem;line-height:1.35;}
+    .message.user{flex-direction:row-reverse;}
+    .avatar{width:var(--avatar-size);height:var(--avatar-size);border-radius:50%;background:#fff;
+            display:flex;align-items:center;justify-content:center;font-size:1.2rem;box-shadow:0 0 2px rgba(0,0,0,.2);}
+    .meta{display:block;font-size:.7rem;color:#666;margin-bottom:2px;font-weight:bold;}
 
-    /* ===== SCENARIO SELECTOR ===== */
-    #scenarioContainer{
-      background:#f0f2f5;
-      padding:1rem;
-      display:flex;
-      flex-direction:column;
-      gap:1rem;
-    }
-    #scenarioContainer select{
-      padding:.6rem .9rem;
-      border-radius:8px;
-      border:1px solid #ccc;
-      font-size:.95rem;
-      background:#fff;
-    }
-
-    /* ===== CHAT WINDOW ===== */
-    #chatContainer{
-      flex:1;
-      display:none;
-      flex-direction:column;
-      background:url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0nMTAwJyBoZWlnaHQ9JzEwMCcgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnL3N2ZyI+PHJlY3Qgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIgZmlsbD0iI2VhZTdkZiIvPjwvc3ZnPg==') repeat; /* light pattern */
-      overflow:auto;
-      padding:1rem .6rem 1rem .6rem;
-    }
-
-    /* ===== MESSAGE BUBBLE WRAPPER ===== */
-    .message{
-      display:flex;
-      gap:.4rem;
-      margin:.4rem 0;
-      max-width:80%;
-      font-size:.9rem;
-      line-height:1.4;
-    }
-    /* avatar circle */
-    .avatar{
-      width:var(--avatar-size);
-      height:var(--avatar-size);
-      border-radius:50%;
-      background:#fff;
-      color:#555;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:1.1rem;
-      flex:0 0 var(--avatar-size);
-      box-shadow:0 0 2px rgba(0,0,0,.2);
-    }
-    /* bubble common */
-    .bubble{
-      padding:.55rem .9rem;
-      border-radius:7.5px;
-      position:relative;
-      word-wrap:break-word;
-      background:#fff;
-    }
-
-    /* outgoing (user) */
-    .user{flex-direction:row-reverse;}
+    .bubble{position:relative;padding:.45rem .8rem;border-radius:7.5px;background:#fff;word-wrap:break-word;}
     .user .bubble{background:var(--wa-light);}
-    .user .bubble:before{
-      content:'';
-      position:absolute;top:0;right:-6px;
-      border:6px solid transparent;
-      border-top-color:var(--wa-light);
-      border-right:none;
-      transform:translateY(4px);
-    }
-
-    /* incoming – friend/bot */
-    .bot .bubble{background:#fff;}
-    .bot .bubble:before{
-      content:'';
-      position:absolute;top:0;left:-6px;
-      border:6px solid transparent;
-      border-top-color:#fff;
-      border-left:none;
-      transform:translateY(4px);
-    }
-
-    /* feedback & evaluation */
+    .user .bubble:before{content:'';position:absolute;top:0;right:-6px;border:6px solid transparent;
+                         border-top-color:var(--wa-light);border-right:none;transform:translateY(4px);}
+    .bot .bubble:before{content:'';position:absolute;top:0;left:-6px;border:6px solid transparent;
+                        border-top-color:#fff;border-left:none;transform:translateY(4px);}
     .feedback .bubble{background:#d8eeff;}
-    .evaluation .bubble{
-      background:#fff2b8;
-      font-style:italic;
-    }
+    .feedback .bubble:before{content:'';position:absolute;top:0;left:-6px;border:6px solid transparent;
+                             border-top-color:#d8eeff;border-left:none;transform:translateY(4px);}
+    .evaluation .bubble{background:#fff2b8;font-style:italic;}
+    .evaluation .bubble:before{content:'';position:absolute;top:0;left:-6px;border:6px solid transparent;
+                               border-top-color:#fff2b8;border-left:none;transform:translateY(4px);}
 
-    /* ===== INPUT AREA ===== */
-    #inputContainer{
-      display:flex;
-      gap:.4rem;
-      background:#f0f2f5;
-      padding:.5rem .6rem;
-    }
-    #userInput{
-      flex:1;
-      border:none;
-      border-radius:20px;
-      padding:.55rem .9rem;
-      font-size:.9rem;
-      outline:none;
-    }
-    button.primary,button.secondary{
-      border:none;
-      border-radius:50%;
-      width:42px;
-      height:42px;
-      color:#fff;
-      cursor:pointer;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:1.2rem;
-    }
-    button.primary{background:var(--wa-green);}
-    button.secondary{background:#888;}
+    /* ===== INPUT BAR ===== */
+    #inputContainer{display:flex;gap:.4rem;background:#f0f2f5;padding:.5rem .6rem;}
+    #userInput{flex:1;border:none;border-radius:20px;padding:.55rem .9rem;font-size:.9rem;outline:none;}
+    button{border:none;border-radius:50%;width:42px;height:42px;color:#fff;cursor:pointer;
+           display:flex;align-items:center;justify-content:center;font-size:1.2rem;}
+    button.primary{background:var(--wa-green);}  button.secondary{background:#888;}
   </style>
 </head>
 <body>
   <div class="phone">
-    <!-- ===== TOP NAV ===== -->
+    <!-- NAVBAR -->
     <nav class="top-nav">
       <a href="tel:1201">📞 ער"ן</a>
       <a href="mainpage.html">🏠 תפריט</a>
     </nav>
 
-    <!-- ===== SCENARIO SELECTOR ===== -->
+    <!-- SELECTOR -->
     <div id="scenarioContainer">
       <label for="scenarioSelect">בחר/י דמות (גיל + קשר):</label>
       <select id="scenarioSelect">
@@ -198,12 +81,12 @@
       </select>
     </div>
 
-    <!-- ===== CHAT AREA ===== -->
+    <!-- CHAT -->
     <div id="chatContainer">
       <div id="instructionsDiv"></div>
       <div id="chat"></div>
 
-      <!-- ===== INPUT BAR ===== -->
+      <!-- INPUT -->
       <div id="inputContainer">
         <input id="userInput" type="text" placeholder="הקלד/י הודעה…" />
         <button id="sendBtn" class="primary">➤</button>
@@ -212,107 +95,90 @@
     </div>
   </div>
 
-  <!-- ===== SCRIPT ===== -->
+  <!-- SCRIPT -->
   <script>
-    // Elements
-    const scenarioSelect    = document.getElementById('scenarioSelect');
-    const scenarioContainer = document.getElementById('scenarioContainer');
-    const chatContainer     = document.getElementById('chatContainer');
-    const instructionsDiv   = document.getElementById('instructionsDiv');
-    const chat              = document.getElementById('chat');
-    const userInput         = document.getElementById('userInput');
-    const sendBtn           = document.getElementById('sendBtn');
-    const evaluateBtn       = document.getElementById('evaluateBtn');
+    /* ELEMENTS */
+    const scenarioSelect=document.getElementById('scenarioSelect');
+    const scenarioContainer=document.getElementById('scenarioContainer');
+    const chatContainer=document.getElementById('chatContainer');
+    const instructionsDiv=document.getElementById('instructionsDiv');
+    const chat=document.getElementById('chat');
+    const userInput=document.getElementById('userInput');
+    const sendBtn=document.getElementById('sendBtn');
+    const evaluateBtn=document.getElementById('evaluateBtn');
 
-    // Scenarios
+    /* SCENARIOS */
     const scenarios={
-      "10_student":{display:'אחה"צ בכיתה ריקה…',prompt:'את/ה תלמיד/ה בן/בת 10…'},
-      "16_neighbor":{display:'ערב בשכונה…',prompt:'את/ה מתבגר/ת בן/בת 16…'},
-      "22_classmate":{display:'לילה במעונות…',prompt:'את/ה סטודנט/ית בן/בת 22…'},
-      "35_colleague":{display:'הפסקה בעבודה…',prompt:'את/ה עובד/ת בן/בת 35…'},
-      "75_neighbor":{display:'שכן/ית ותיק/ה 75…',prompt:'את/ה קשיש/ה בן/בת 75…'}
+      "10_student":{d:'אחה"צ בכיתה ריקה. תלמיד/ה בלחש: "אין לי עם מי לשחק…"',p:'את/ה תלמיד/ה בן/בת 10 שמרגיש/ה לבד.'},
+      "16_neighbor":{d:'ערב בשכונה. מתבגר/ת: "אף אחד לא מבין אותי…"',p:'את/ה מתבגר/ת בן/בת 16 בתחושת ריחוק.'},
+      "22_classmate":{d:'לילה במעונות. חבר/ה: "טובע/ת בחובות…" ',p:'את/ה סטודנט/ית בן/בת 22 מוצף/ת.'},
+      "35_colleague":{d:'הפסקה בעבודה: "העומס שובר אותי…"',p:'את/ה עובד/ת בן/בת 35 במתח גבוה.'},
+      "75_neighbor":{d:'צהריים. שכן/ית 75: "הבדידות הורגת…" ',p:'את/ה קשיש/ה בן/בת 75 בבדידות.'}
     };
 
-    // System prompts
+    /* SYSTEM PROMPTS */
     const quickFBSystem='אתה מנטור תומך. כתוב משוב חיובי קצר (≤6 מילים).';
-    const summarySystem=`אתה פסיכולוג מדריך. תן סיכום:
-• מחמאה
-• מה עבד – 3–5
-• לשיפור – 2–4
+    const summarySystem=`אתה פסיכולוג מדריך. תן סיכום כולל:
+• מחמאה ראשית
+• מה עבד – 3-5 נקודות
+• לשיפור – 2-4 הצעות
 טון מחזק ואמפתי.`;
 
+    /* STATE */
     let messages=[];
     let scenarioSystemPrompt='';
 
-    // Init
-    scenarioSelect.onchange=()=>{
-      const key=scenarioSelect.value;
-      if(!key) return;
-      scenarioContainer.style.display='none';
-      chatContainer.style.display='flex';
-      instructionsDiv.textContent=scenarios[key].display;
-      messages=[];
-      scenarioSystemPrompt=scenarios[key].prompt;
-      userInput.focus();
-    };
+    /* EVENTS */
+    scenarioSelect.onchange=()=>{const k=scenarioSelect.value;if(!k)return;
+      scenarioContainer.style.display='none';chatContainer.style.display='flex';
+      instructionsDiv.textContent=scenarios[k].d;messages=[];scenarioSystemPrompt=scenarios[k].p;
+      userInput.focus();};
 
-    sendBtn.onclick=()=>handleSend();
-    userInput.onkeyup=(e)=>{if(e.key==='Enter')handleSend();};
-    evaluateBtn.onclick=()=>handleEvaluate();
+    sendBtn.onclick=handleSend;
+    userInput.onkeyup=e=>{if(e.key==='Enter')handleSend();};
+    evaluateBtn.onclick=handleEvaluate;
 
-    // helpers
+    /* HELPERS */
+    const avatars={user:'😊',feedback:'⭐',bot:'🙁',evaluation:'📝'};  /*   ←  no robot icon   */
+    const labels ={user:'את/ה',feedback:'משוב',bot:'חבר/ה',evaluation:'סיכום'};
+
     function addBubble(role,text){
       const wrap=document.createElement('div');
       wrap.className=`message ${role}`;
-      // avatar
-      const av=document.createElement('div');
-      av.className='avatar';
-      av.textContent=role==='user'?'😊':role==='bot'?'🤖':role==='feedback'?'⭐':'📝';
-      // bubble
-      const bub=document.createElement('div');
-      bub.className='bubble';
-      bub.textContent=text;
-      // assemble
-      wrap.appendChild(av);
-      wrap.appendChild(bub);
-      chat.appendChild(wrap);
-      chat.scrollTop=chat.scrollHeight;
+      const av=document.createElement('div'); av.className='avatar'; av.textContent=avatars[role];
+      const bub=document.createElement('div'); bub.className='bubble';
+      const meta=document.createElement('span'); meta.className='meta'; meta.textContent=labels[role];
+      bub.appendChild(meta); bub.appendChild(document.createTextNode(text));
+      wrap.appendChild(av); wrap.appendChild(bub);
+      chat.appendChild(wrap); chat.scrollTop=chat.scrollHeight;
     }
 
     async function ai(payload){
-      const r=await fetch('/api/chat',{
-        method:'POST',
-        headers:{'Content-Type':'application/json'},
-        body:JSON.stringify(payload)
-      });
-      const d=await r.json();
-      return d.text||'';
+      const r=await fetch('/api/chat',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
+      const d=await r.json();return d.text||'';
     }
 
     async function handleSend(){
-      const txt=userInput.value.trim();
-      if(!txt)return;
-      addBubble('user',txt);
-      messages.push({role:'user',content:txt});
-      userInput.value='';
+      const txt=userInput.value.trim(); if(!txt) return;
+      addBubble('user',txt); messages.push({role:'user',content:txt}); userInput.value='';
 
-      // quick positive fb
+      /* QUICK FEEDBACK */
       ai({messages:[{role:'system',content:quickFBSystem},{role:'user',content:txt}]})
-        .then(f=>addBubble('feedback',f||'💪 יפה!')).catch(()=>{});
+        .then(f=>addBubble('feedback',f||'כל הכבוד!')).catch(()=>{});
 
-      // assistant reply
-      const convo=[{role:'system',content:scenarioSystemPrompt},...messages];
+      /* FRIEND IN DISTRESS */
+      const convo=[{role:'system',content:scenarioSystemPrompt}, ...messages];
       ai({messages:convo}).then(rep=>{
-        addBubble('bot',rep||'…');
-        messages.push({role:'assistant',content:rep});
+        addBubble('bot',rep||'…'); messages.push({role:'assistant',content:rep});
       }).catch(()=>addBubble('bot','שגיאה 😕'));
     }
 
     async function handleEvaluate(){
-      if(!messages.length)return;
+      if(!messages.length) return;
       const userMsgs=messages.filter(m=>m.role==='user').map(m=>({role:'user',content:m.content}));
-      const summary=await ai({messages:[{role:'system',content:summarySystem},...userMsgs]}).catch(()=>null);
-      addBubble('evaluation',summary||'שגיאה בהערכה.');
+      ai({messages:[{role:'system',content:summarySystem}, ...userMsgs]})
+        .then(sum=>addBubble('evaluation',sum||'שגיאה בהערכה.'))
+        .catch(()=>addBubble('evaluation','שגיאה בהערכה.'));
     }
   </script>
 </body>
